--- a/cs260hiked-html/miles.css
+++ b/cs260hiked-html/miles.css
@@ -5,6 +5,9 @@ body {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: rgb(230, 230, 230);
   }
+  .player-name {
+    margin-right: 30px;
+  }
   .user {
     margin-right: 30px;
     margin-top: 15px;
