--- a/cs260hiked-html/public/about.css
+++ b/cs260hiked-html/public/about.css
@@ -5,6 +5,10 @@ body {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: rgb(230, 230, 230);
   }
+  .user {
+    margin-right: 20px;
+    margin-top: 15px;
+  }
 
   img {
   
